fix(angular/badge): ensure overflow visible

--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -1131,6 +1131,14 @@ textarea {
 
 .sbb-badge {
   position: relative;
+
+  // The badge should make sure its host is overflow visible so that the badge content
+  // can be rendered outside of the element. Some components such as <sbb-icon> explicitly
+  // style `overflow: hidden` so this requires extra specificity so that it does not
+  // depend on style load order.
+  &.sbb-badge {
+    overflow: visible;
+  }
 }
 
 .sbb-badge-content {
